--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <header class="u-clearfix u-custom-color-1 u-header u-header" id="sec-e2e7">
         <div class="u-clearfix u-sheet u-sheet-1">
             <a href="#" class="u-image u-logo u-image-1" data-image-width="437" data-image-height="126">
-                <img src="/images/IMG-20230119-WA00051.jpg" class="u-logo-image u-logo-image-1">
+                <img src="images/IMG-20230119-WA00051.jpg" class="u-logo-image u-logo-image-1">
             </a>
             <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" data-responsive-from="MD">
                 <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px; font-weight: 500;" wfd-invisible="true">
@@ -102,12 +102,12 @@
                                     </div>
                                 </div>
                                 <div class="u-align-left u-container-style u-layout-cell u-size-20 u-layout-cell-3">
-                                    <div class="u-container-layout u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-3"><span class="u-file-icon u-icon u-icon-circle u-text-custom-color-2 u-white u-icon-2"><img src="/images/2728954-7ad6dbf3.png" alt=""></span>
+                                    <div class="u-container-layout u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-3"><span class="u-file-icon u-icon u-icon-circle u-text-custom-color-2 u-white u-icon-2"><img src="images/2728954-7ad6dbf3.png" alt=""></span>
                                         <h5 class="u-text u-text-body-alt-color u-text-4">Cleaning</h5>
                                     </div>
                                 </div>
                                 <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-20 u-layout-cell-4">
-                                    <div class="u-container-layout u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-4"><span class="u-file-icon u-icon u-icon-circle u-text-custom-color-3 u-white u-icon-3"><img src="/images/4757379-5d3fe52d.png" alt=""></span>
+                                    <div class="u-container-layout u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-4"><span class="u-file-icon u-icon u-icon-circle u-text-custom-color-3 u-white u-icon-3"><img src="images/4757379-5d3fe52d.png" alt=""></span>
                                         <h5 class="u-text u-text-body-alt-color u-text-5">restoring</h5>
                                     </div>
                                 </div>
