--- a/index.html
+++ b/index.html
@@ -128,19 +128,19 @@
                             <div class="u-container-layout u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-1"><span class="u-file-icon u-icon u-icon-circle u-palette-1-base u-text-white u-icon-1"><img src="images/3865631-30b32ea7.png" alt=""></span>
                                 <h4 class="u-text u-text-2">Painting<br>
                                 </h4>
-                                <p class="u-text u-text-3">We'll send a multi-skilled repairman to your residential or commercial property so you save the time and...</p>
+                                <p class="u-text u-text-3">We offer interior painting, exterior painting and water proofing services which includes color consultations to perfectly suit your preference..</p>
                             </div>
                         </div>
                         <div class="u-align-left u-container-style u-layout-cell u-size-20 u-layout-cell-2">
                             <div class="u-container-layout u-container-layout-2"><span class="u-custom-color-2 u-file-icon u-icon u-icon-circle u-icon-2"><img src="images/2728954-c8b81104.png" alt=""></span>
                                 <h4 class="u-text u-text-4">Cleaning</h4>
-                                <p class="u-text u-text-5">We'll send a multi-skilled repairman to your residential or commercial property so you save the time and...</p>
+                                <p class="u-text u-text-5">With our cleaning services you can rest assured knowing that our professionals priority is to leave your place spotless.</p>
                             </div>
                         </div>
                         <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-20 u-layout-cell-3">
                             <div class="u-container-layout u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-container-layout-3"><span class="u-custom-color-3 u-file-icon u-icon u-icon-circle u-icon-3"><img src="images/4757379-2a76614c.png" alt=""></span>
                                 <h4 class="u-text u-text-6">Restorations</h4>
-                                <p class="u-text u-text-7">We'll send a multi-skilled repairman to your residential or commercial property so you save the time and...</p>
+                                <p class="u-text u-text-7">We offer commercial and residential restorations for both interior and exterior requrements.</p>
                             </div>
                         </div>
                     </div>
@@ -208,13 +208,14 @@
                                             <span style="font-weight: 700; font-size: 3.75rem;">CALL US NOW:</span><b>
                                                 <br>
                                                 <span style="font-weight: 400;">
-                                                    <span style="font-size: 2.25rem;">+27 763 655 187</span>
+                                                    <span style="font-size: 1.8rem;">+27 782 820 641</span>
+                                                    <span style="font-size: 1.8rem;">/ +27 783 443 670</span>
                                                 </span>
                                                 <br></b>
                                         </h3>
                                         <div class="u-container-style u-group u-hidden-xs u-palette-1-base u-group-1">
                                             <div class="u-container-layout u-container-layout-2">
-                                                <p class="u-small-text u-text u-text-default u-text-variant u-text-2">Get in touch with us to book and appoint with us and have a professional at your services.</p>
+                                                <p class="u-small-text u-text u-text-default u-text-variant u-text-2">Get in touch with us to book an appoint with us and have a professional at your services.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -261,7 +262,7 @@
                                     <div class="u-container-layout u-container-layout-1">
                                         <h2 class="u-text u-text-1">Get your 'TO DO' list completed by a real professional!</h2>
                                         <div class="u-form u-grey-15 u-form-1">
-                                            <form action="https://forms.nicepagesrv.com/v2/form/process" class="u-clearfix u-form-spacing-25 u-form-vertical u-inner-form" style="padding: 11px;" source="email" name="form" redirect="true" redirect-address="mailto:info@trustpainter.co.za?subject=Web%20form">
+                                            <form action="contactForm.php" class="u-clearfix u-form-spacing-25 u-form-vertical u-inner-form" style="padding: 11px;" source="email" name="form" redirect="true" redirect-address="mailto:info@trustpainter.co.za?subject=Web%20form" method="post">
                                                 <div class="u-form-group u-form-name u-label-none">
                                                     <label for="name-3b9a" class="u-label">Name</label>
                                                     <input type="text" placeholder="Enter your Name" id="name-3b9a" name="name" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="">
