--- a/index.html
+++ b/index.html
@@ -262,18 +262,18 @@
                                     <div class="u-container-layout u-container-layout-1">
                                         <h2 class="u-text u-text-1">Get your 'TO DO' list completed by a real professional!</h2>
                                         <div class="u-form u-grey-15 u-form-1">
-                                            <form action="contactForm.php" class="u-clearfix u-form-spacing-25 u-form-vertical u-inner-form" style="padding: 11px;" source="email" name="form" redirect="true" redirect-address="mailto:info@trustpainter.co.za?subject=Web%20form" method="post">
+                                            <form action="contactForm.php" class="u-clearfix u-form-spacing-25 u-form-vertical u-inner-form" style="padding: 11px;" source="email" name="forms" redirect="true" redirect-address="mailto:info@trustpainter.co.za?subject=Web%20form" method="post">
                                                 <div class="u-form-group u-form-name u-label-none">
                                                     <label for="name-3b9a" class="u-label">Name</label>
-                                                    <input type="text" placeholder="Enter your Name" id="name-3b9a" name="name" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="">
+                                                    <input type="text" placeholder="Enter your Name" id="name-3b9a" name="names" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="">
                                                 </div>
                                                 <div class="u-form-email u-form-group u-label-none">
                                                     <label for="email-3b9a" class="u-label">Email</label>
-                                                    <input type="email" placeholder="Enter a valid email address" id="email-3b9a" name="email" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="">
+                                                    <input type="email" placeholder="Enter a valid email address" id="email-3b9a" name="emails" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="">
                                                 </div>
                                                 <div class="u-form-group u-form-message u-label-none">
                                                     <label for="message-3b9a" class="u-label">Message</label>
-                                                    <textarea placeholder="Enter your message" rows="4" cols="50" id="message-3b9a" name="message" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required=""></textarea>
+                                                    <textarea placeholder="Enter your message" rows="4" cols="50" id="message-3b9a" name="messages" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required=""></textarea>
                                                 </div>
                                                 <div class="u-align-left u-form-group u-form-submit">
                                                     <a href="#" class="u-btn u-btn-submit u-button-style">Submit</a>
